Resolve API-970 "add deletedat and change expiresat type"
